- Fixed sizing issue with header text on small screen sizes.

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,6 @@
     color: #2196F3;
 }
 
-
 /*.footer {*/
     /*bottom: 0;*/
     /*padding-top: 630px;*/
@@ -66,6 +65,15 @@
     .navbar {
         background-color: #1C2331;
     }
+
+    .home-header-1{
+        font-size: 50px;
+    }
+
+    .home-header-2{
+        font-size: 35px;
+    }
+
     .call {
         display: none;
     }
@@ -74,6 +82,13 @@
 @media only screen and (min-width: 769px) {
     .call-small{
         display: none;
+    }
+    .home-header-1{
+        font-size: 75px;
+    }
+
+    .home-header-2{
+        font-size: 50px;
     }
 }
 
